--- a/styles.css
+++ b/styles.css
@@ -165,4 +165,8 @@ img {
   width: 100%;
   object-fit: cover;
   border-radius: 10px;
+  /* margin-left: 60px; */
+}
+code span {
+  white-space: nowrap;
 }
