--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ header {
 
 #navbar ul {
   height: 88%;
-  padding: 0;
+  padding: 0px 0px 40px 0px;
   overflow-y: auto;
   overflow-x: hidden;
 }
