--- a/styles-all.css
+++ b/styles-all.css
@@ -52,7 +52,7 @@ header {
 }
 
 /* 自己添加 */
-#navbar ul:nth-of-type(1) li:nth-of-type(3) {
+#navbar ul:nth-of-type(1){
   border-bottom: 1px solid;
 }
 
@@ -73,11 +73,6 @@ header {
 
 @media only screen and (max-width: 815px) {
   /* For mobile phones: */
-  #navbar ul {
-    border: 1px solid;
-    height: 207px;
-  }
-
   #navbar {
     background-color: white;
     position: absolute;
@@ -85,16 +80,25 @@ header {
     padding: 0;
     margin: 0;
     width: 100%;
-    max-height: 275px;
+    max-height: 550px;
     border: none;
     z-index: 1;
-    border-bottom: 2px solid;
+    /* border-bottom: 2px solid; */
+  }
+
+  #navbar ul {
+    border: 1px solid;
+    height: 207px;
+  }
+
+  #navbar ul:first-of-type {
+    height: 140px;
   }
 
   #main-doc {
     position: relative;
     margin-left: 0px;
-    margin-top: 270px;
+    margin-top: 480px;
   }
 }
 
